# fs-app-dev

./: README.md  docker-compose.yml
client/src/: App.jsx
microservice/: CMakeLists.txt  Dockerfile
microservice/src/: microservice.cpp
redis-service/: Dockerfile
redis-service/src/: redis-service.cpp
server/: Dockerfile  app.js
